Bug 82355 - Search - Aliases count is not displayed.
Description:- Added support for alias search. 
Created a button labeled ‘alias’. When we do ‘all object type’ or alias search, update the matching alias count. Clicking on alias button, displays the alias result in detail . 

https://bugzilla.zimbra.com/show_bug.cgi?id=82355

Copied from Perforce
 Change: 548991

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -486,6 +486,7 @@ OVP_related = Related
 OVP_recent = Recent Objects
 OVP_allSearchResult = All Result
 OVP_accountSearchResult = Accounts
+OVP_aliasSearchResult = Aliases
 OVP_domainSearchResult = Domains
 OVP_searchOption = Search Options
 OVP_savedSearch = Saved Searches
