bug 98558 add fields for chat configuration
Merging

//depot/zimbra/users/achhatre/JUDASPRIEST/...

to //depot/zimbra/JUDASPRIEST/...

https://bugzilla.zimbra.com/show_bug.cgi?id=98558

Copied from Perforce
 Change: 553224

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1242,6 +1242,7 @@ NAD_MailOptions = Mail Options
 NAD_MailOptionsStandardClient = Standard (HTML) client
 NAD_ContactsOptions = Contacts Options
 NAD_CalendarOptions = Calendar Options
+NAD_ChatOptions = Chat Options
 NAD_MailOptionsSending = Sending mail
 NAD_MailOptionsReceiving = Receiving mail
 NAD_MailOptionsComposing = Composing mail
@@ -1375,12 +1376,12 @@ NAD_zimbraGeneralFeature = General Features
 NAD_zimbraMailFeature = Mail Features
 NAD_zimbraContactFeature = Contact Features
 NAD_zimbraCalendarFeature = Calendar Features
-NAD_zimbraIMFeature = IM Features
+NAD_zimbraChatFeature = IM Features
 NAD_zimbraSearchFeature = Search Features
 LBL_zimbraFeatureNotebookEnabled = Documents
 LBL_zimbraFeatureBriefcasesEnabled = Briefcase
 LBL_zimbraFeatureHtmlComposeEnabled = HTML compose
-LBL_zimbraFeatureIMEnabled = Instant Messenger
+LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = Instant Notifications
 LBL_zimbraPrefIMAutoLogin = Automatically login to instant messaging services
 NAD_Feature = Feature: 
@@ -1504,6 +1505,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Show time zone list in appointment vie
 LBL_zimbraPrefImapSearchFoldersEnabled = Show IMAP search folders
 LBL_zimbraPrefMailForwardingAddress = User-specified forwarding addresses:
 LBL_zimbraPrefMailForwardingAddressMsg = User-specified forwarding addresses
+LBL_zimbraPrefChatPlaySound = Play notification sound
 
 ERROR_missing_zimbraPrefMailForwardingAddress = At least one forwarding address must be specified when choosing not to keep local copies of messages.
 
