--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -694,15 +694,14 @@ Alert_MoreResultsAvailable = Found over {0} results.<br/> Please narrow the sear
 Alert_ServerDetails = \
 	<b>Note:</b> Settings on an individual server override global settings.
 Alert_GlobalConfig = \
-	<b>Note:</b> \
-	Settings only apply to servers that have the appropriate service(s) \
-	installed and enabled. Server settings override global settings.
+    <b>Note:</b> \
+    Settings only apply to servers that have the appropriate service(s) \
+    installed and enabled. Settings applied to servers, domains and classes of service override global settings.
 Alert_ServerRestart = \
 	<b>Warning:</b> \
 	Changes to settings requires server restart in order to take effect.
 Alert_ProxyConfig = \
-	<b>Note:</b> \
-	Only configurable when proxy is installed and enabled. Changes to settings require proxy restart to take effect.
+    <b>Warning:</b> Changes to these settings require proxy restart to take effect.
 Alert_AmavisdRestart = \
 	<b>Note:</b> \
 	Changes to settings requires amavisd restart in order to take effect.
