--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1241,7 +1241,6 @@ NAD_MailOptions = Mail Options
 NAD_MailOptionsStandardClient = Standard (HTML) client
 NAD_ContactsOptions = Contacts Options
 NAD_CalendarOptions = Calendar Options
-NAD_ChatOptions = Chat Options
 NAD_MailOptionsSending = Sending mail
 NAD_MailOptionsReceiving = Receiving mail
 NAD_MailOptionsComposing = Composing mail
@@ -1359,6 +1358,8 @@ NAD_ACC_ReindexingNotRunning = Reindexing is not running
 NAD_ACC_ReindexingComplete = Reindexing is complete
 NAD_ACC_ReindexingStarted = Reindexing process started
 NAD_ACC_ReindexingCancelled = Reindexing is cancelled
+NAD_ACC_ReindexingQueueFull = Reindexing queue is full. Please try reindexing later or increase zimbraIndexingQueueMaxSize.
+NAD_ACC_ReindexingFailed = Reindexing failed. Please check mailbox.log for details.
 NAD_ACC_ReindexingStatus = {0} messages reindexed. {1} messages remaining. {2} messages failed.
 
 NAD_RedologFsyncIntervalMS = FSync interval for redo log
@@ -1375,12 +1376,12 @@ NAD_zimbraGeneralFeature = General Features
 NAD_zimbraMailFeature = Mail Features
 NAD_zimbraContactFeature = Contact Features
 NAD_zimbraCalendarFeature = Calendar Features
-NAD_zimbraChatFeature = IM Features
+NAD_zimbraIMFeature = IM Features
 NAD_zimbraSearchFeature = Search Features
 LBL_zimbraFeatureNotebookEnabled = Documents
 LBL_zimbraFeatureBriefcasesEnabled = Briefcase
 LBL_zimbraFeatureHtmlComposeEnabled = HTML compose
-LBL_zimbraFeatureChatEnabled = Chat
+LBL_zimbraFeatureIMEnabled = Instant Messenger
 LBL_zimbraFeatureInstantNotify = Instant Notifications
 LBL_zimbraPrefIMAutoLogin = Automatically login to instant messaging services
 NAD_Feature = Feature: 
@@ -1504,7 +1505,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Show time zone list in appointment vie
 LBL_zimbraPrefImapSearchFoldersEnabled = Show IMAP search folders
 LBL_zimbraPrefMailForwardingAddress = User-specified forwarding addresses:
 LBL_zimbraPrefMailForwardingAddressMsg = User-specified forwarding addresses
-LBL_zimbraPrefChatPlaySound = Play notification sound
 
 ERROR_missing_zimbraPrefMailForwardingAddress = At least one forwarding address must be specified when choosing not to keep local copies of messages.
 
