Bug 95488 - zimbraDomainAdminMaxMailQuota does not work when creating the account
Desc :- While creating an account, if the account quota user has entered in input field (zimbraMailQuota) is greater than maximum amount of mail quota a domain admin can set on a user (zimbraDomainAdminMaxMailQuota), we notify the user with appropriate error message. 

https://bugzilla.zimbra.com/show_bug.cgi?id=95488

Copied from Perforce
 Change: 559903

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1798,6 +1798,7 @@ ERROR_DL_NAME_INVALID = The specified distribution list name is invalid.
 ERROR_INVALID_VOLUME_PATH = The specified volume path is invalid!
 ERROR_NO_SUCH_VOLUME = The specified volume does not exist!
 ERROR_VOLUME_ALREADY_EXISTS = The specified volume already exists!
+ERROR_MAX_ACCOUNT_QUOTA = Invalid value for account quota! Account quota exceeds the maximum amount of mail quota domain admin can set on a user.
 
 ERROR_LICENSE = License error encountered 
 ERROR_NO_VALID_SUBNETS = Error! Value {0} is not a valid list of subnets. Please consult with documentation for help on configuring MTA Trusted Networks. <br/>Additional information about MTA Trusted Networks configuration can be found at <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
