Integrated the following from //depot/zimbra/JUDASPRIEST/...:
bug 101962 - fix empty list view focus

Currently, we treat empty list views as disabled in
DwtListView, causing them to be absent from the tab order.
This doesn't, however, prevent them from obtaining focus, as
we focus the list view when clicking a folder -- even when
it's empty. Unfortunately, the styling for focused, but
empty, list views was somewhat odd, leading to the bug at
hand.

We address this by adding a border around the "No results
found" text when focusing an empty list, and restoring focus
to empty list views.

https://bugzilla.zimbra.com/show_bug.cgi?id=101962

Copied from Perforce
 Change: 561701

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -694,14 +694,15 @@ Alert_MoreResultsAvailable = Found over {0} results.<br/> Please narrow the sear
 Alert_ServerDetails = \
 	<b>Note:</b> Settings on an individual server override global settings.
 Alert_GlobalConfig = \
-    <b>Note:</b> \
-    Settings only apply to servers that have the appropriate service(s) \
-    installed and enabled. Settings applied to servers, domains and classes of service override global settings.
+	<b>Note:</b> \
+	Settings only apply to servers that have the appropriate service(s) \
+	installed and enabled. Server settings override global settings.
 Alert_ServerRestart = \
 	<b>Warning:</b> \
 	Changes to settings requires server restart in order to take effect.
 Alert_ProxyConfig = \
-    <b>Warning:</b> Changes to these settings require proxy restart to take effect.
+	<b>Note:</b> \
+	Only configurable when proxy is installed and enabled. Changes to settings require proxy restart to take effect.
 Alert_AmavisdRestart = \
 	<b>Note:</b> \
 	Changes to settings requires amavisd restart in order to take effect.
@@ -1798,7 +1799,6 @@ ERROR_DL_NAME_INVALID = The specified distribution list name is invalid.
 ERROR_INVALID_VOLUME_PATH = The specified volume path is invalid!
 ERROR_NO_SUCH_VOLUME = The specified volume does not exist!
 ERROR_VOLUME_ALREADY_EXISTS = The specified volume already exists!
-ERROR_MAX_ACCOUNT_QUOTA = Invalid value for account quota! Account quota exceeds the maximum amount of mail quota domain admin can set on a user.
 
 ERROR_LICENSE = License error encountered 
 ERROR_NO_VALID_SUBNETS = Error! Value {0} is not a valid list of subnets. Please consult with documentation for help on configuring MTA Trusted Networks. <br/>Additional information about MTA Trusted Networks configuration can be found at <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
