--- a/WebRoot/messages/ZabMsg.properties
+++ b/WebRoot/messages/ZabMsg.properties
@@ -54,7 +54,7 @@ zimbraAbout = About Zimbra...
 
 # Used for About Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-aboutScreenCopyright = Zimbra {0} (build {1})<br><br> Copyright \u00a9 2005-2015 Synacor, Inc. \
+aboutScreenCopyright = Zimbra {0} (build {1})<br><br> Copyright \u00a9 2005-{0} Synacor, Inc. \
   All rights reserved. This product is protected by U.S. and international copyright and intellectual property laws. \
   "Zimbra" is a registered trademark of Synacor, Inc. in the United States and other jurisdictions. \
   All other marks and names mentioned herein may be trademarks of their respective companies.\
@@ -63,7 +63,7 @@ aboutScreenCopyright = Zimbra {0} (build {1})<br><br> Copyright \u00a9 2005-2015
 
 # Used for Login/Splash Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
-splashScreenCopyright = Copyright \u00a9 2005-2015 Synacor, Inc. All rights reserved. "Zimbra" is a registered trademark of Synacor, Inc.
+splashScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. All rights reserved. "Zimbra" is a registered trademark of Synacor, Inc.
 
 clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: the leader in open source messaging and collaboration :: \
     <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
