Bug: 103214 - Update copyright in Standard Client
Copyright text should always be in English. Remove string key from localized versions so that we fall back to English.

https://bugzilla.zimbra.com/show_bug.cgi?id=103214

Copied from Perforce
 Change: 565556

--- a/WebRoot/messages/ZabMsg.properties
+++ b/WebRoot/messages/ZabMsg.properties
@@ -52,6 +52,8 @@ About_Button_Label = About Zimbra Version
 zimbraHomePage = Zimbra Home Page
 zimbraAbout = About Zimbra...
 
+# Copyrights must be in English, so these two keys are omitted from localized versions in order to fall back to the ones here.
+
 # Used for About Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
 aboutScreenCopyright = Zimbra {0} (build {1})<br><br> Copyright \u00a9 2005-{0} Synacor, Inc. \
@@ -60,7 +62,6 @@ aboutScreenCopyright = Zimbra {0} (build {1})<br><br> Copyright \u00a9 2005-{0} 
   All other marks and names mentioned herein may be trademarks of their respective companies.\
   <br><br> Synacor, Inc. \
   <a href="http://www.synacor.com" target="_blank">www.synacor.com</a>
-
 # Used for Login/Splash Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
 splashScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. All rights reserved. "Zimbra" is a registered trademark of Synacor, Inc.
