--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -917,7 +917,10 @@ NAD_MTA_RelayPort = Relay MTA port:
 NAD_MTA_MaxMsgSize = Maximum message size (KB):
 NAD_DOC_MaxUploadSize = Maximum size of a file uploaded from the desktop (KB):
 NAD_MTA_Options = Options:
-NAD_MTA_DnsLookups = Enable DNS lookups
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = Enabled
+NAD_MTA_SMTP_Dns_Disabled = Disabled
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_ProtocolChecks = Protocol checks
 NAD_MTA_reject_invalid_helo_hostname = Hostname in greeting violates RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = Client must greet with a fully qualified hostname (reject_non_fqdn_helo_hostname)
