bug 104236 use HTML5 file upload in admin UI
https://bugzilla.zimbra.com/show_bug.cgi?id=104236

Copied from Perforce
 Change: 567847

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -2778,3 +2778,4 @@ ERROR_RPNameCustomDisallowed = The name "{0}" is a reserved retention policy nam
 ERROR_InvalidRPLifetime = The range must be a positive integer.
 ERROR_RPExists = Policy "{0}" already exists.
 multiple_servers = multiple servers
+ERROR_INVALID_FILE_NAME = Invalid file name. Use browse button to select a valid file.
