Integrate change 568615 from zimbra to JUDASPRIEST
-------------
Bug: 104402 - While doing Forward conversation and clicking save draft from new window >> attachment gets double.
Don't forward msg IDs after Fwd Conv moves to new window, if draft has been saved. The forwarded messages will already be parts in the saved draft.

https://bugzilla.zimbra.com/show_bug.cgi?id=104402

Copied from Perforce
 Change: 568616

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -694,14 +694,15 @@ Alert_MoreResultsAvailable = Found over {0} results.<br/> Please narrow the sear
 Alert_ServerDetails = \
 	<b>Note:</b> Settings on an individual server override global settings.
 Alert_GlobalConfig = \
-    <b>Note:</b> \
-    Settings only apply to servers that have the appropriate service(s) \
-    installed and enabled. Settings applied to servers, domains and classes of service override global settings.
+	<b>Note:</b> \
+	Settings only apply to servers that have the appropriate service(s) \
+	installed and enabled. Server settings override global settings.
 Alert_ServerRestart = \
 	<b>Warning:</b> \
 	Changes to settings requires server restart in order to take effect.
 Alert_ProxyConfig = \
-    <b>Warning:</b> Changes to these settings require proxy restart to take effect.
+	<b>Note:</b> \
+	Only configurable when proxy is installed and enabled. Changes to settings require proxy restart to take effect.
 Alert_AmavisdRestart = \
 	<b>Note:</b> \
 	Changes to settings requires amavisd restart in order to take effect.
@@ -1244,6 +1245,7 @@ NAD_MailOptions = Mail Options
 NAD_MailOptionsStandardClient = Standard (HTML) client
 NAD_ContactsOptions = Contacts Options
 NAD_CalendarOptions = Calendar Options
+NAD_ChatOptions = Chat Options
 NAD_MailOptionsSending = Sending mail
 NAD_MailOptionsReceiving = Receiving mail
 NAD_MailOptionsComposing = Composing mail
@@ -1377,11 +1379,14 @@ NAD_zimbraGeneralFeature = General Features
 NAD_zimbraMailFeature = Mail Features
 NAD_zimbraContactFeature = Contact Features
 NAD_zimbraCalendarFeature = Calendar Features
+NAD_zimbraChatFeature = IM Features
 NAD_zimbraSearchFeature = Search Features
 LBL_zimbraFeatureNotebookEnabled = Documents
 LBL_zimbraFeatureBriefcasesEnabled = Briefcase
 LBL_zimbraFeatureHtmlComposeEnabled = HTML compose
+LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = Instant Notifications
+LBL_zimbraPrefIMAutoLogin = Automatically login to instant messaging services
 NAD_Feature = Feature: 
 LBL_zimbraFeatureViewInHtmlEnabled =Viewing attachments as HTML
 LBL_zimbraFeatureGalEnabled = Global Address List access
@@ -1503,6 +1508,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Show time zone list in appointment vie
 LBL_zimbraPrefImapSearchFoldersEnabled = Show IMAP search folders
 LBL_zimbraPrefMailForwardingAddress = User-specified forwarding addresses:
 LBL_zimbraPrefMailForwardingAddressMsg = User-specified forwarding addresses
+LBL_zimbraPrefChatPlaySound = Play notification sound
 
 ERROR_missing_zimbraPrefMailForwardingAddress = At least one forwarding address must be specified when choosing not to keep local copies of messages.
 
@@ -1796,7 +1802,6 @@ ERROR_DL_NAME_INVALID = The specified distribution list name is invalid.
 ERROR_INVALID_VOLUME_PATH = The specified volume path is invalid!
 ERROR_NO_SUCH_VOLUME = The specified volume does not exist!
 ERROR_VOLUME_ALREADY_EXISTS = The specified volume already exists!
-ERROR_MAX_ACCOUNT_QUOTA = Invalid value for account quota! Account quota exceeds the maximum amount of mail quota domain admin can set on a user.
 
 ERROR_LICENSE = License error encountered 
 ERROR_NO_VALID_SUBNETS = Error! Value {0} is not a valid list of subnets. Please consult with documentation for help on configuring MTA Trusted Networks. <br/>Additional information about MTA Trusted Networks configuration can be found at <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2779,4 +2784,3 @@ ERROR_InvalidRPLifetime = The range must be a positive integer.
 ERROR_RPExists = Policy "{0}" already exists.
 multiple_servers = multiple servers
 ERROR_INVALID_FILE_NAME = Invalid file name. Use browse button to select a valid file.
-
