Bug: 104228 - Links to *.zimbra.com should use HTTPS
Replace http://*.zimbra.com with https://*.zimbra.com in skin and message property files, and a few other miscellaneous locations.

https://bugzilla.zimbra.com/show_bug.cgi?id=104228

Copied from Perforce
 Change: 569757

--- a/WebRoot/admin_skins/_base/base/skin.properties
+++ b/WebRoot/admin_skins/_base/base/skin.properties
@@ -43,7 +43,7 @@ SkinVersion		= 2
 #  then you are required to use the Zimbra Inside logo. 
 #
 #	LogoImgDir		= /zimbra/skins/_base/logos/ZimbraInside
-#	LogoURL			= http://www.zimbra.com
+#	LogoURL			= https://www.zimbra.com
 #
 #-------------------------------------------------------------------------
 #  If you are using ZCS under the network (commercial) license, 
@@ -55,7 +55,7 @@ SkinVersion		= 2
 #
 #========================================================================#
 LogoImgDir		= @AppContextPath@/skins/carbon/logos
-LogoURL			= http://www.zimbra.com
+LogoURL			= https://www.zimbra.com
 
 ##########################################################################
 #                               Skin Colors                              #
