--- a/WebRoot/admin_skins/carbon/skin.properties
+++ b/WebRoot/admin_skins/carbon/skin.properties
@@ -39,7 +39,7 @@ SkinVersion   = 1.0.0
 #  then you are required to use the Zimbra logo (the default). 
 #
 #	LogoImgDir		= /zimbra/skins/_base/logos
-#	LogoURL			= http://www.zimbra.com
+#	LogoURL			= https://www.zimbra.com
 #
 #-------------------------------------------------------------------------
 #  If you are using ZCS under the open source license, 
@@ -47,7 +47,7 @@ SkinVersion   = 1.0.0
 #  then you are required to use the Zimbra Inside logo. 
 #
 #	LogoImgDir		= /zimbra/skins/_base/logos/ZimbraInside
-#	LogoURL			= http://www.zimbra.com
+#	LogoURL			= https://www.zimbra.com
 #
 #-------------------------------------------------------------------------
 #  If you are using ZCS under the network (commercial) license, 
@@ -60,7 +60,7 @@ SkinVersion   = 1.0.0
 #========================================================================#
 
 LogoImgDir		= @AppContextPath@/skins/carbon/logos
-LogoURL			= http://www.zimbra.com
+LogoURL			= https://www.zimbra.com
 
 SkinImgDir			= @AppContextPath@/skins/@SkinName@/img
 SkinAnimatedImgDir	= @AppContextPath@/img/animated
