--- a/WebRoot/admin_skins/_base/light/skin.properties
+++ b/WebRoot/admin_skins/_base/light/skin.properties
@@ -147,7 +147,7 @@ SkinVersion   = 2.0.0
 #  then you are required to use the Zimbra logo (the default). 
 #
 #	LogoImgDir		= /zimbra/skins/_base/logos
-#	LogoURL			= http://www.zimbra.com
+#	LogoURL			= https://www.zimbra.com
 #
 #-------------------------------------------------------------------------
 #  If you are using ZCS under the open source license, 
@@ -155,7 +155,7 @@ SkinVersion   = 2.0.0
 #  then you are required to use the Zimbra Inside logo. 
 #
 #	LogoImgDir		= /zimbra/skins/_base/logos/ZimbraInside
-#	LogoURL			= http://www.zimbra.com
+#	LogoURL			= https://www.zimbra.com
 #
 #-------------------------------------------------------------------------
 #  If you are using ZCS under the network (commercial) license, 
