--- a/WebRoot/admin_skins/vami2/skin.properties
+++ b/WebRoot/admin_skins/vami2/skin.properties
@@ -37,7 +37,7 @@ SkinVersion		= 2
 #  then you are required to use the Zimbra logo (the default). 
 #
 # LogoImgDir		= /zimbra/skins/_base/logos
-# LogoURL			= http://www.zimbra.com
+# LogoURL			= https://www.zimbra.com
 #
 #-------------------------------------------------------------------------
 #  If you are using ZCS under the open source license, 
@@ -45,7 +45,7 @@ SkinVersion		= 2
 #  then you are required to use the Zimbra Inside logo. 
 #
 #	LogoImgDir		= /zimbra/skins/_base/logos/ZimbraInside
-#	LogoURL			= http://www.zimbra.com
+#	LogoURL			= https://www.zimbra.com
 #
 #-------------------------------------------------------------------------
 #  If you are using ZCS under the network (commercial) license, 
