--- a/WebRoot/messages/ZabMsg.properties
+++ b/WebRoot/messages/ZabMsg.properties
@@ -42,7 +42,7 @@ issues that were not covered in the documentation.
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Use Zimbra with other clients? Check out these guides.
 zimbraTitle = Zimbra Administration Console
 about_title = Zimbra&trade; Administration Console
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Zimbra Version:
 LBL_HomeHelpCenter = Zimbra Help Center
 LBL_HomeMsgCount = Message Count:
@@ -66,10 +66,10 @@ aboutScreenCopyright = Zimbra {0} (build {1})<br><br> Copyright \u00a9 2005-{2} 
 # Takes in the current year as a parameter for copyright end year value
 splashScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. All rights reserved. "Zimbra" is a registered trademark of Synacor, Inc.
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: the leader in open source messaging and collaboration :: \
-    <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">Forums</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> :: the leader in open source messaging and collaboration :: \
+    <a target="_new" href="https://blog.zimbra.com">Blog</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">Forums</a>
 ZWC_END_USER_GUIDE = ZWC End User Guide for 8.0
 ZWC_END_USER_GUIDE_INFO = The end user guide describes the features and applications used in the Zimbra Web Client.
 MessageContent = message
@@ -94,8 +94,8 @@ HELP_adminGuideDetail = The Administration Guide manual describes the Zimbra sys
 HELP_usersGuide = End Users Guide
 HELP_usersGuideDetail = The end user guide describes the feature and applications used in the Zimbra Web Client.
 HELP_askCommunity = Ask the Community
-HELP_askCommunityItem1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra Forums</a> is a great place to get answers to your questions. You can search for answers from the postings, and you can post a question.
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> includes articles the support team and community have written in response to troubleshooting and administration issues that were not covered in the documentation
+HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra Forums</a> is a great place to get answers to your questions. You can search for answers from the postings, and you can post a question.
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> includes articles the support team and community have written in response to troubleshooting and administration issues that were not covered in the documentation
 HELP_MIG_Q1 = How do I migrate server email accounts from Exchange into Zimbra?
 HELP_MIG_Q2 = How can my users import the contents of a .pst file from a Microsoft Outlook 2003, 2007, 2010 mailbox into Zimbra?
 HELP_MIG_Q3 = How do I migrate server email accounts from Domino into Zimbra?
