--- a/WebRoot/messages/ZabMsg.properties
+++ b/WebRoot/messages/ZabMsg.properties
@@ -61,7 +61,7 @@ aboutScreenCopyright = Zimbra {0} (build {1})<br><br> Copyright \u00a9 2005-{2} 
   "Zimbra" is a registered trademark of Synacor, Inc. in the United States and other jurisdictions. \
   All other marks and names mentioned herein may be trademarks of their respective companies.\
   <br><br> Synacor, Inc. \
-  <a href="http://www.synacor.com" target="_blank">www.synacor.com</a>
+  <a href="https://www.synacor.com" target="_blank">www.synacor.com</a>
 # Used for Login/Splash Screen copyright section
 # Takes in the current year as a parameter for copyright end year value
 splashScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. All rights reserved. "Zimbra" is a registered trademark of Synacor, Inc.
