--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,6 @@
     <property name="ajax.dir" location="../zm-ajax" />
     <property name="ajax.src.dir" location="${ajax.dir}/src" />
     <property name="ajax.build.dir" location="${ajax.dir}/build" />  
-    <property name='ajax.build.classes.dir' value='${ajax.build.dir}/classes'/>
 
     <!-- Properties -->
     <dirname property="this.zwc.basedir" file="${ant.file.zm-admin-console}" />
@@ -277,6 +276,7 @@
         <ivy:install organisation="zimbra" module="zm-client" revision="latest.integration" settingsRef="dev.settings" from="chain-resolver" to="build-tmp" overwrite="true" transitive="true" type="jar"/>
         <ivy:install organisation="zimbra" module="zm-taglib" revision="latest.integration" settingsRef="dev.settings" from="chain-resolver" to="build-tmp" overwrite="true" transitive="true" type="jar"/>
         <ivy:install organisation="zimbra" module="zm-store" revision="latest.integration" settingsRef="dev.settings" from="chain-resolver" to="build-tmp" overwrite="true" transitive="true" type="jar"/>
+        <ivy:install organisation="zimbra" module="zm-ajax" revision="latest.integration" settingsRef="dev.settings" from="chain-resolver" to="build-tmp" overwrite="true" transitive="true" type="jar"/>
         <ivy:install organisation="org.glassfish.gmbal" module="gmbal-api-only" revision="2.2.6" settingsRef="dev.settings" from="chain-resolver" to="build-tmp" overwrite="true" transitive="true" type="jar"/>
         <ivy:install organisation="javax.xml.bind" module="jaxb-api" revision="2.2.6" settingsRef="dev.settings" from="chain-resolver" to="build-tmp" overwrite="true" transitive="true" type="jar"/>
         <ivy:install organisation="com.sun.xml.bind" module="jaxb-impl" revision="2.2.6" settingsRef="dev.settings" from="chain-resolver" to="build-tmp" overwrite="true" transitive="true" type="jar"/>
@@ -293,7 +293,6 @@
             <webinf refid="overlay.webinf.fileset" />
             <webinf refid="webinf.fileset" />
 
-            <classes dir='${ajax.build.classes.dir}' excludes='**/build/**,**/buildinfo/**'/>
             <classes refid="overlay.src.props.fileset" />
             <classes refid="src.props.fileset" />
             <classes refid="overlay.messages.fileset" />
@@ -998,7 +997,7 @@
                 />
         <taskdef name="jammer"
                  classname="com.zimbra.webClient.build.PackageJammerTask"
-                 classpath="${ajax.build.classes.dir}"
+                 classpathref='class.path'
                 />
 
         <fileset id='jam-files.fileset' dir='${build.js.dir}' includes='*.js' excludes='*_all.js,TinyMCE*'/>
