--- a/build.xml
+++ b/build.xml
@@ -222,7 +222,7 @@
 
         <sync todir="${js.dir}">
             <fileset dir="${ajax.dir}/${js.dir}"/>
-             <preserveintarget>
+                <preserveintarget>
             <include name="**"/>
         </preserveintarget>
         </sync>  
@@ -230,16 +230,16 @@
         <mkdir dir='${keys.dir}'/>
          <sync todir="${web.dir}/keys">
             <fileset dir="${ajax.dir}/${web.dir}/keys"/>
-             <preserveintarget>
+                <preserveintarget>
             <include name="**"/>
-        </preserveintarget>
+            </preserveintarget>
         </sync>
         
         <sync todir="${web.dir}/messages">
             <fileset dir="${ajax.dir}/${web.dir}/messages"/>
-             <preserveintarget>
+                <preserveintarget>
             <include name="**"/>
-        </preserveintarget>
+            </preserveintarget>
         </sync>
 
          <sync todir="${web.dir}/jquery">
@@ -1277,9 +1277,23 @@ ext = BeanUtils.cook(ext);
 
     <target name='clean' depends='customer-init'>
         <delete dir='${build.dir}'/>
-        <delete dir='${customer.build.dir}' />
-        <delete dir="${jquery.dir}"/>
-        <delete dir="${modernizr.dir}"/>
+        <delete dir='${customer.build.dir}'/>
+        <delete dir='${web.dir}/jquery'/>
+        <delete dir='${web.dir}/modernizr'/>
+        <delete dir='${web.dir}/yui'/>
+        <delete dir='${web.dir}/js/ajax'/>
+        <delete dir='${web.dir}/js/zimbra'/>
+        <delete>
+            <fileset dir="${web.dir}/keys">
+                <include name="Ajx*.properties"/>
+            </fileset>
+        </delete>
+        <delete>
+            <fileset dir="${web.dir}/messages">
+                <include name="Ajx*.properties"/>
+                <include name="I18n*.properties"/>
+            </fileset>
+        </delete>
     </target>
 
 	<!-- JavaScript API Documentation Tasks -->
