ZCS-1510 revert gitignore changes, as it turns out that ant clean is not intuitive for developers

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 build
 .classpath
 .project
+WebRoot/jquery
+WebRoot/js/ajax
+WebRoot/js/zimbra
+WebRoot/keys/AjxKeys*.properties
+WebRoot/messages/AjxMsg*.properties
+WebRoot/messages/I18nMsg*.properties
+WebRoot/modernizr
+WebRoot/yui
