ZCS-1661 Use zip published by zm-timezones repo to get timezone data
zm-admin-console:ivy.xml
   - add dependency on zm-timezones repo

zm-admin-console:build.xml
   - change timezones target to get published zip from zm-timezones repo
   - extract timezone files from zip and copy to appropriate locations
   - templates and timezones target are already defined as dependencies for jam-files target so no need to explicitly call those targets

--- a/ivy.xml
+++ b/ivy.xml
@@ -5,7 +5,6 @@
  <info organisation="zimbra" module="zm-admin-console" status="integration">
  </info>
 
-
  <dependencies>
   <dependency org="org.glassfish.gmbal" name="gmbal-api-only" rev="2.2.6"/>
   <dependency org="javax.xml.bind" name="jaxb-api" rev="2.2.6"/>
@@ -20,6 +19,9 @@
   <dependency org="gifencoder" name="gifencoder" rev="0.9"/>
   <dependency org="com.yahoo.platform.yui" name="yuicompressor" rev="2.4.2-zimbra"/>
   <dependency org="rhino" name="js" rev="1.6R7"/>
+  <dependency org="zimbra" name="zm-timezones" rev="latest.integration">
+   <artifact name="zm-timezones" type="zip" />
+  </dependency>
   <dependency org="zimbra" name="zm-soap" rev="latest.integration"/>
   <dependency org="zimbra" name="zm-ajax" rev="latest.integration"/>
   <dependency org="zimbra" name="zm-common" rev="latest.integration"/>
