Fixing literal apostrophe characters not escaped in format strings
Apostrophes are quoting characters in MessageFormat-like formats.
A literal apostrophe must be written as a sequence of two apostrophe
characters, otherwise it might prevent template expansion further along
in the string, or at least be removed by the end result as a quoting
character.
Fixed many strings where that was not done properly or at all.
But only on strings containing elements such as {0}, the only way
available to identify something as a format.
I've been unable to identify and fix the additional format strings
present but
missing those elements.

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -216,7 +216,7 @@ Domain_QUOTA_Configuration = Domain Quota Setting
 NAD_AddRegex = Add Regex
 NAD_RemoveRegex = Remove
 LBL_EmailValidate = Regular expresssion for invalid email address:
-ERROR_MSG_EmailValidReg = Invalid regular expression: {0}, which should be email format (e.g '@\\d+', 'postmaster@test.com'). 
+ERROR_MSG_EmailValidReg = Invalid regular expression: {0}, which should be email format (e.g ''@\\d+'', ''postmaster@test.com''). 
 
 Alias_Find = Find
 Domain_CreateGALSyncAccts = Create GAL Sync account (recommended)
