--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -2432,6 +2432,7 @@ UI_Comp_AccountsSkinsTab = Account View, Skins Page
 UI_Comp_AccountsZimletsTab = Account View, Zimlets Page
 UI_Comp_DownloadsView = Downloads View
 UI_Comp_HelpCenterView = Help Center View
+UI_Comp_StatusPane = Status Pane
 
 UI_Comp_DLMembersTab = Distribution List View, Members Page
 UI_Comp_DLAliasTab = Distribution List View, Aliases Page
