ZCS-4386 - upgrade yuicompressor to 2.4.8 - make sure zm-ajax code is copied directly to build directory so main directory remains clear from that clutter - thirdparty libraries will be fetched using ivy - remove webclient related image files
ZCS-1511
- Move ZMsg.properties files to zm-ajax as it is common between admin console and webclient

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
 build
 .classpath
 .project
-WebRoot/jquery
-WebRoot/js/ajax
-WebRoot/js/zimbra
-WebRoot/keys/AjxKeys*.properties
-WebRoot/messages/AjxMsg*.properties
-WebRoot/messages/I18nMsg*.properties
-WebRoot/modernizr
-WebRoot/yui
+bin
