ZCS-3553 Found the problem alphabets show delayed after I typed by admin console - on account name change, don't fire CountAccountRequest as it is not required but when domain changes we need to make sure it is fired - fixed error in build.xml

--- a/build.xml
+++ b/build.xml
@@ -1270,11 +1270,7 @@ ext = BeanUtils.cook(ext);
         <delete dir='${web.dir}/yui'/>
         <delete dir='${web.dir}/js/ajax'/>
         <delete dir='${web.dir}/js/zimbra'/>
-        <delete>
-            <fileset dir="${web.dir}/keys">
-                <include name="Ajx*.properties"/>
-            </fileset>
-        </delete>
+        <delete dir='${web.dir}/keys'/>
         <delete>
             <fileset dir="${web.dir}/messages">
                 <include name="Ajx*.properties"/>
