IMAPD Configuration on Admin Console

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -849,6 +849,7 @@ NAD_Tab_MTA = MTA
 NAD_Tab_AUTH = Authentication
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
+NAD_Tab_IMAPD = IMAPD
 NAD_Tab_Services = Services
 NAD_Tab_VolumeMgt = Volumes
 NAD_Tab_HSM = HSM
@@ -902,8 +903,11 @@ NAD_MTA_AuthenticationEnabled = Enabled
 NAD_MTA_TlsAuthenticationOnly = TLS authentication only
 LBL_zimbraSmtpHostname = Web mail MTA Hostnames:
 tt_zimbraSmtpHostname = The MTA that the web server will connect to for sending mails
+tt_zimbraReverseProxyUpstreamImapServers = The pool of servers that are available to the proxy for handling IMAP sessions.
 Add_zimbraSmtpHostname = Add
 Remove_zimbraSmtpHostname = Remove
+Add_zimbraReverseProxyUpstreamImapServers = Add
+Remove_zimbraReverseProxyUpstreamImapServers = Remove
 NAD_MTA_WebMailPort = Web mail MTA Port:
 NAD_MTA_WebMailTimeout = Web mail MTA timeout (s):
 NAD_MTA_RelayMTA = Relay MTA for external delivery:
@@ -1324,6 +1328,16 @@ IMAP_SSL_Proxy_Port = IMAP SSL proxy port number
 IMAP_SSLService = Enable SSL for IMAP service
 IMAP_CleartextLoginEnabled = Enable clear text login 
 IMAP_NumThreads = Number of threads:
+
+#imapd
+Global_IMAPD_ServiceGrp = Service
+Global_IMAPD_NetworkGrp = Network
+Remote_IMAP_Server = Enable Remote IMAP Server
+Remote_IMAP_SSLServer = Enable SSL for Remote IMAP Server
+Remote_IMAP_Bind_Port = Remote IMAP port number
+Remote_IMAP_SSL_Bind_Port = Remote IMAP SSL port number
+Reverse_Proxy_Upstream_Imap = Reverse Upstream Server
+
 Server_WrongPortWarningTitle = Warning!
 Server_WrongPortWarning = Warning! {0} is set to {1}. This value is not advised when IMAP/POP proxy service is enabled. What would you like to do?
 Server_WrongPortWarning_OP1 = 1. Change the value of {0} to {1} (recommended value)? 
@@ -1805,6 +1819,7 @@ ERROR_NOT_CIDR = Error! {0} is not a valid subnet value in CIDR notation! <br/>A
 ERROR_NOT_STARTING_ADDR = Error! non-null host address bits in {0}, perhaps you should use {1} instead! <br/>Additional information about MTA Trusted Networks configuration can be found at <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Error! Local interface address {0} is excluded from MTA Trusted Networks by entry {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = Error! {0} is not a valid IP address or network mask.
+ERROR_INVALID_IP_OR_HOSTNAME = Error! {0} is not a valid IP address or host name.
 ERROR_INVALID_IP_ADDR = Invalid IP address
 ERROR_ONE_FP_PREFIX_ALLOWED = Only one foreign principal for the same provider is allowed.
 WARNING_DOMAIN_DS_NOT_CONFIGRED = Warning: GAL datasources are not configured for this domain.
