--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1093,6 +1093,8 @@ NAD_Notes = Notes:
 LBL_zimbraMailQuota = Account quota (MB):
 MSG_zimbraMailQuota = Account quota
 
+NAD_Ephemeral_Setting = Ephemeral Backend Setting
+LBL_zimbraEphemeralBackendURL = Ephemeral Backend URL:
 tt_StartTypingDomainName = Type in a domain name
 tt_StartTypingCOSName = Type in a COS name
 tt_StartTypingAccountName = Type in an account name
@@ -1807,6 +1809,9 @@ ERROR_LOCAL_ADDR_EXCLUDED = Error! Local interface address {0} is excluded from 
 ERROR_INVALID_EXCLUDE_ADDR = Error! {0} is not a valid IP address or network mask.
 ERROR_INVALID_IP_ADDR = Invalid IP address
 ERROR_ONE_FP_PREFIX_ALLOWED = Only one foreign principal for the same provider is allowed.
+ERROR_INVALID_BACKEND_URL = Error! {0} is not a valid Ephemeral Data backend value.
+ERROR_INVALID_BACKEND = Error! {0} is not a valid backend. The two currently supported backends are ldap and ssdb.
+ERROR_EMPTY_BACKEND_URL = Error! Backend URL is not allowed to be empty.
 WARNING_DOMAIN_DS_NOT_CONFIGRED = Warning: GAL datasources are not configured for this domain.
 WARNING_RESETING_SMTP_HOST = Warning: this will cause the web server to send outbound mail to {0}. You should do this only if an MTA is installed and running on {1}! Do you want to proceed with this change?
 WARNING_TIME_ZONE_INVALID = The current time zone \"{0}\" for {1} is invalid, please go to Preferences to set the valid time zone.
